--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | IP Address Tracker</title>
+    <title>IP Address Tracker</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
